--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
-    <string name="app_name">PlaylistMaker</string>
+    <string name="app_name">Playlist Maker</string>
+    <string name="main_title">Playlist maker</string>
+    <string name="main_button_search">Поиск</string>
+    <string name="main_button_media">Медиатека</string>
+    <string name="main_button_settings">Настройки</string>
+    <string name="settings_title">Настройки</string>
+    <string name="settings_dark_theme">Темная тема</string>
+    <string name="settings_share_app">Поделиться приложением</string>
+    <string name="settings_write_support">Написать в поддержку</string>
+    <string name="settings_user_agreement">Пользовательское соглашение</string>
+    <string name="go_back">Назад</string>
 </resources>
