--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="settings_write_support">Написать в поддержку</string>
     <string name="settings_user_agreement">Пользовательское соглашение</string>
     <string name="go_back">Назад</string>
+    <string name="android_course_link">https://practicum.yandex.ru/android-developer/</string>
+    <string name="email_yapr_support">praktikum@support.yandex.ru</string>
+    <string name="email_subject_support">Сообщение разработчикам и разработчицам приложения Playlist Make</string>
+    <string name="email_text_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
+    <string name="url_user_agreement_yand_prac">https://yandex.ru/legal/practicum_offer/</string>
 </resources>
