--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="et_search_hint">Поиск</string>
     <string name="title_tv_search">Поиск</string>
     <string name="album_title_and_track_time_template">%s • %s</string>
+    <string name="artwork_content_description">Изображение альбома</string>
+    <string name="go_to_track_content_description">Перейти к треку</string>
 </resources>
