--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="search_img_notfound_descr">Ничего не нашлось</string>
     <string name="search_tv_notfound_text">Ничего не нашлось</string>
     <string name="search_btn_clear_history">Очистить историю</string>
+    <string name="search_tv_history">Вы искали</string>
 </resources>
